Added new components, divided the screen in two and made a basic button and text field design.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 node_modules
+/resources/images/business-model-woman-message.jpg
+/resources/images/parking-multi-storey-car-park.jpg
+/resources/images/pexels-photo-69206.jpeg
+/resources/images/autos-technology-vw-multi-storey-car-park-63294.jpeg
